--- a/blockchain/foundry.toml
+++ b/blockchain/foundry.toml
@@ -5,7 +5,8 @@ libs = ["lib"]
 
 remappings = [
     "@chainlink/contracts/=lib/chainlink-brownie-contracts/contracts/",
-    "forge-std/=lib/forge-std/src/"
+    "forge-std/=lib/forge-std/src/",
+    "@evvm/testnet-contracts/=lib/Testnet-Contracts/src/"
 ]
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
