--- a/cre-catan/start-game/config.production.json
+++ b/cre-catan/start-game/config.production.json
@@ -1,3 +1,5 @@
 {
-  "schedule": "*/30 * * * * *"
+  "schedule": "*/30 * * * * *",
+  "chainSelectorName": "ethereum-testnet-sepolia",
+  "gameControllerAddress": "0xCE21A1Ee76726Bb487684330BB216E5f233A47fb"  
 }
