--- a/package.json
+++ b/package.json
@@ -10,27 +10,36 @@
     "play": "tsx scripts/terminal-game.ts",
     "test-agent": "tsx scripts/test-agent.ts"
   },
-  "keywords": ["catan", "game", "llm", "agents", "nextjs"],
+  "keywords": [
+    "catan",
+    "game",
+    "llm",
+    "agents",
+    "nextjs"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "next": "^15.0.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "@ai-sdk/anthropic": "^2.0.45",
+    "@ai-sdk/google": "^2.0.42",
+    "@ai-sdk/mistral": "^2.0.24",
+    "@ai-sdk/openai": "^2.0.71",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.2",
+    "ai": "^5.0.100",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.454.0",
+    "next": "^15.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
-    "zustand": "^5.0.1",
-    "ai": "^4.0.0",
-    "@ai-sdk/openai": "^1.0.0",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@types/node": "^22.0.0",
@@ -43,4 +52,3 @@
     "typescript": "^5.6.0"
   }
 }
-
