--- a/package.json
+++ b/package.json
@@ -24,11 +24,16 @@
     "@ai-sdk/google": "^2.0.42",
     "@ai-sdk/mistral": "^2.0.24",
     "@ai-sdk/openai": "^2.0.71",
+    "@privy-io/react-auth": "^3.8.0",
+    "@privy-io/server-auth": "^1.32.5",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.2",
+    "@solana-program/system": "^0.10.0",
+    "@solana-program/token": "^0.9.0",
+    "@solana/kit": "^5.0.0",
     "ai": "^5.0.100",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
