--- a/cre-catan/start-game/config.production.json
+++ b/cre-catan/start-game/config.production.json
@@ -1,5 +1,6 @@
 {
   "schedule": "*/30 * * * * *",
   "chainSelectorName": "ethereum-testnet-sepolia-base-1",
-  "gameControllerAddress": "0xCE21A1Ee76726Bb487684330BB216E5f233A47fb"  
+  "gameControllerAddress": "0xCE21A1Ee76726Bb487684330BB216E5f233A47fb",
+  "apiUrl": "https://api.catan.com"  
 }
