--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "play": "tsx scripts/terminal-game.ts",
-    "test-agent": "tsx scripts/test-agent.ts"
+    "test-agent": "tsx scripts/test-agent.ts",
+    "types:generate": "supabase gen types typescript --project-id rsnwbumtrggklqsfnuju > app/utils/supabase/database.types.ts"
   },
   "keywords": [
     "catan",
@@ -60,5 +61,6 @@
     "tailwindcss": "^3.4.15",
     "tsx": "^4.7.0",
     "typescript": "^5.6.0"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
