improving agent configuration and interaction

--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,9 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY=supabase-anon-key
 RPC_URL=your_blockchain_rpc_url
 FISHER_PRIVATE_KEY=your_fisher_wallet_private_key
 GAME_MOVE_SERVICE_ADDRESS=your_game_move_contract_address
+
+# Agents Private Keys
+AGENT_CONQUISTADOR_PRIVATE_KEY=private-key
+AGENT_MERCHANT_PRIVATE_KEY=private-key
+AGENT_ARCHITECT_PRIVATE_KEY=private-key
+AGENT_GAMBLER_PRIVATE_KEY=private-key
