--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "play": "tsx scripts/terminal-game.ts",
     "test-agent": "tsx scripts/test-agent.ts",
-    "types:generate": "supabase gen types typescript --project-id rsnwbumtrggklqsfnuju > app/utils/supabase/database.types.ts"
+    "types:generate": "supabase gen types typescript --project-id rsnwbumtrggklqsfnuju > app/utils/supabase/database.types.ts",
+    "wallets:generate": "tsx scripts/generate-agent-wallets.ts"
   },
   "keywords": [
     "catan",
