--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,9 @@ AGENT_CONQUISTADOR_PRIVATE_KEY=private-key
 AGENT_MERCHANT_PRIVATE_KEY=private-key
 AGENT_ARCHITECT_PRIVATE_KEY=private-key
 AGENT_GAMBLER_PRIVATE_KEY=private-key
+CDP_API_KEY_ID=your-api-key-id
+CDP_API_KEY_SECRET=your-api-key-secret
+CDP_WALLET_1_SECRET=your-wallet-secret
+CDP_WALLET_2_SECRET=your-wallet-secret
+CDP_WALLET_3_SECRET=your-wallet-secret
+CDP_WALLET_4_SECRET=your-wallet-secret
