--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ai-sdk/mistral": "^2.0.24",
     "@ai-sdk/openai": "^2.0.71",
     "@chainlink/cre-sdk": "^1.0.0",
+    "@coinbase/cdp-sdk": "^1.38.6",
     "@privy-io/react-auth": "^3.8.0",
     "@privy-io/server-auth": "^1.32.5",
     "@radix-ui/react-dialog": "^1.1.2",
